# UglyGPT

./: .env.example  .gitignore  README.md  data_ingestion.py  pyproject.toml  requirements.local.txt  requirements.txt
agent/: __init__.py  config.py  memory.py
agent/actions/: command.py
agent/indexes/: __init__.py  base.py  bing_search.py  bm25.py  combine.py  memory.py
agent/retrievers/: __init__.py  arxiv.py  base.py  bing.py  bing_search.py  bm25.py  combine.py  llama_index.py
agent/storage/: sqlite.py
agent/tools/: base.py
agent/utils/: config.py  nlp.py  singleton.py  sqlite.py
agent/workflow/: coder.py
core/: __init__.py
core/base/: __init__.py  config.py
core/chains/: __init__.py  base.py  map.py  react.py  reduce.py
core/llm/: __init__.py  base.py  chatgpt.py  copilot.py  dashscope.py  error.py  instructor.py  model.py  openai_api.py  tool.py  utils.py  yi.py  zhipu.py
core/provider/: __init__.py  chatgpt.py  dashscope.py  openai_api.py  yi.py  zhipu.py
examples/: agent_amap.py  agent_run.py  auto_tasks.py  emotion_alert.py  llm.py  map_reduce.py  novel.py
tests/: test_config.py  test_file.py  test_utils.py
tests/base/: test_config.py  test_logs.py  test_singleton.py
tests/memory/: test_local.py  test_memory.py
tests/provider/: test_embedding.py  test_provider.py
uglygpt/: __init__.py  coder.py  feishu_trending.py  find_repo.py  obsidian.py  repo_analyze.py  sandbox.py  text_splitter.py  trending.py
uglygpt/actions/: action.py  api_design.py  babyagi.py  base.py  coder.py  command.py  deployment.py  mapsqlite.py  pm.py  prd.py  task_create.py  utils.py
uglygpt/agent/: __init__.py  agent.py  agent_executor.py  execution.py  prompt.py  schema.py  (+3 more)
workflows/: coder.py  default_files.py  feishu_trending.py  obsidian.py  repo_analyzer.py  sandbox.py
(+272 files in other folders)
