[tool.poetry]
name = "uglygpt"
version = "0.1.0"
description = ""
authors = ["uglyboy-tl <25730357+uglyboy-tl@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uglychain = "^0.1.0"

[tool.poetry.group.dev.dependencies]
uglychain = {extras = ["llama-index","bm25","dashscope"], version = "^0.1.0"}
llama-index-readers-github = {version = "^0.1.1", python = ">=3.11,<3.12"}

[tool.poetry.group.test.dependencies]
ruff = "^0.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
trending = 'uglygpt.obsidian:trending'